# scicomp_project

./: Cargo.toml  README.md
experiment_results/: A.csv  A_H.csv  r0.csv
experiment_results/cgs/: orthogonality_loss_cgs_vec.csv  time_cgs_vec.csv  time_cgs_vec_matlab.csv
experiment_results/cgs/H/: H_cgs_10.csv  H_cgs_11.csv  H_cgs_12.csv  H_cgs_13.csv  H_cgs_14.csv  H_cgs_15.csv  H_cgs_16.csv  H_cgs_17.csv  H_cgs_18.csv  H_cgs_19.csv  H_cgs_2.csv  H_cgs_20.csv  H_cgs_21.csv  (+56 more)
experiment_results/gs/: orthogonality_loss_gs_vec.csv  time_gs_vec.csv  time_gs_vec_matlab.csv
experiment_results/lanczos/: orthogonality_loss_lanczos_vec.csv  time_lanczos_vec.csv  time_lanczos_vec_matlab.csv
experiment_results/mgs/: orthogonality_loss_mgs_H_vec.csv  orthogonality_loss_mgs_vec.csv  time_mgs_H_vec.csv  time_mgs_H_vec_matlab.csv  time_mgs_vec.csv  time_mgs_vec_matlab.csv
matlab_version/: main.asv  main.m
python_visualizations/: A.csv  A_H.csv  data_handling.py  main.py  visualization.py
python_visualizations/cgs/: orthogonality_loss_cgs_vec.csv  time_cgs_vec.csv  time_cgs_vec_matlab.csv
python_visualizations/gs/: orthogonality_loss_gs_vec.csv  time_gs_vec.csv  time_gs_vec_matlab.csv
python_visualizations/lanczos/: orthogonality_loss_lanczos_vec.csv  time_lanczos_vec.csv  time_lanczos_vec_matlab.csv
python_visualizations/mgs/: orthogonality_loss_mgs_H_vec.csv  orthogonality_loss_mgs_vec.csv  time_mgs_H_vec.csv  time_mgs_H_vec_matlab.csv  time_mgs_vec.csv  time_mgs_vec_matlab.csv
src/: algo_analysis.rs  algorithms.rs  csv_handler.rs  functionality.rs  main.rs
(+2075 files in other folders)
