[package]
name = "scicomp_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = { version = "0.32.3", features = ["rand"] }
ndarray-rand = "0.14.0"
gramschmidt = "0.6.0"
ndarray = "0.15.6"